--- a/src/configs/config.ini
+++ b/src/configs/config.ini
@@ -14,3 +14,4 @@ WMDThreshold = 2
 WolframAlphaAppIdKey = None
 PrintMessages = True
 TicTacToeFontPath = ./FreeMono.ttf
+SpeechKey = 4c4b65c6-709c-4df5-8ab9-b402561e4a1b
