--- a/src/configs/default_config.ini
+++ b/src/configs/default_config.ini
@@ -16,4 +16,4 @@ PrintMessages = True
 TicTacToeFontPath = ../data/FreeMono.ttf
 YandexTranslatorAPIKey = None
 FactsFilePath = ../data/facts.txt
-SpeechKey = 4c4b65c6-709c-4df5-8ab9-b402561e4a1b
+SpeechKey = None
